<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:id="@+id/fr_signUp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView

            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icon"
            android:contentDescription="@null"/>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dolpin"
            android:textColor="#6B9DE8"
            android:textSize="35sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messenger"
            android:textColor="#6B9DE8"
            android:textSize="35sp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#575454"
                android:textSize="35sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it"
                android:textColor="#575454"
                android:textSize="20sp"
                />

            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:paddingStart="@dimen/margin_size"
                android:paddingEnd="@dimen/margin_size"
                android:background="@drawable/bg_btn"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/facebook"
                    app:tint="#fff"
                    android:contentDescription="@null"/>
                <Button
                    android:id="@+id/bt_facebook"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:text="@string/continue_with_facebook"
                    android:textColor="#F5F6F8"
                    android:textSize="15sp"
                    />
            </RelativeLayout>
            <Button
                android:id="@+id/bt_SignUP"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:text="@string/i_ll_use_email_or_phone"
                android:textColor="#4876D5"
                android:textSize="15sp"
                android:background="@drawable/bgedit"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google_plus"
                    android:contentDescription="@null"/>
                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/linkedin"
                    android:contentDescription="@null"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_acount"
                android:textColor="#575454"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#14409A"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:ignore="OnClick" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>