<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/up"
    android:orientation="vertical"
    android:id="@+id/fr_register"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_size"
        android:paddingEnd="@dimen/margin_size"

        >

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="#fff"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="45sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>


        <Button
            android:id="@+id/bt_select_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/rounder_select_photo"
            android:text="@string/chose_photo"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circleImageView_select_photo" />


        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="4dp"
            android:id="@+id/circleImageView_select_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            >


            <EditText
                android:id="@+id/edit_User"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:background="@drawable/bgedit"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_size"
                android:paddingEnd="@dimen/margin_size"
                android:textSize="18sp"
                android:importantForAutofill="no"
                android:hint="@string/user_name"
                />
            <TextView
                android:layout_marginStart="15dp"
                android:background="#fff"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/user_name"
                android:textColor="#151414"
                android:textSize="13sp"

                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            >


            <EditText
                android:id="@+id/edit_Email"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/bgedit"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_size"
                android:paddingEnd="@dimen/margin_size"
                android:textSize="18sp"
                android:importantForAutofill="no"
                android:hint="@string/email_name"
                />
            <TextView
                android:layout_marginStart="15dp"
                android:background="#fff"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/email_address"
                android:textColor="#151414"
                android:textSize="13sp"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            >
            <EditText
                android:id="@+id/edit_Password"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/bgedit"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_size"
                android:paddingEnd="@dimen/margin_size"
                android:textSize="18sp"
                android:hint="@string/pass_word"
                android:importantForAutofill="no" />
            <TextView
                android:layout_marginStart="15dp"
                android:background="#fff"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_word"
                android:textAllCaps="true"
                android:textColor="#151414"
                android:textSize="13sp" />
            <ImageView
                android:src="@drawable/pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:contentDescription="@null" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >
            <androidx.appcompat.widget.SwitchCompat
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="40dp"
                />
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_accept_the_policy"
                android:textColor="#000"
                android:textSize="12sp"
                android:layout_marginStart="50dp"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_Register"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/bg_btn"/>
        <TextView
            android:id="@+id/txt_BackLogin"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/twitter"
                android:contentDescription="@null" />
            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google_plus"
                android:contentDescription="@null"/>
            <ImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/linkedin"
                android:contentDescription="@null"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>